# StudyBot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: Function.md  UserStories.md
src/: main.py
src/studybot/: __init__.py  bot.py  config.py
src/studybot/comand/: __init__.py  all_task.py  start.py  task.py
src/studybot/database/: database.py
src/studybot/meassage/: __init__.py  check_task.py  messages_handler.py  task_loader.py
src/studybot/qery_handler/: __init__.py  numbers.py  task.py  tasks.py
src/studybot/text/: __init__.py
src/studybot/utils/: markup.py
tests/: __init__.py
